file(GLOB SRCS "*.c" "*.cpp")
file(GLOB PUBLIC_HEADERS "*.h")

set(SRCS ${SRCS} ${PUBLIC_HEADERS})
set(INCS ${ZLIB_INCLUDE_DIR})
set(DEFS QUAZIP_BUILD Z_PREFIX)

set(LIBS Qt5::Core zlib)

__add_real_target(quazip dll SOURCE ${SRCS} DEF ${DEFS} LIB ${LIBS}
	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../)

if(CC_INSTALL_QUAZIP)
	INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.h")
endif()
